Fixed some bugs in AsciiArtist